syntax = "proto3";

package users;

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  int64 date_of_birth = 4;
}